--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "babel src -d dist",
     "dev": "nodemon --exec babel-node src/index.js ",
     "start": "node dist/index.js",
-    "prettier-format": "prettier --config .prettierrc 'src/**/*.js' --write"
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.js' --write",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.0",
     "@babel/core": "^7.17.0",
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
+    "babel-jest": "^27.5.0",
     "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
