--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-redis",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
     "build": "babel src -d dist",
